--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
+   <!--Aula 6-->
     <title>Meu mundo</title>
     <h1>Seja bem-vindo ao meu mundo</h1>
 <meta name="keywords" content="Sucesso, progresso, financeiro, vida boa">
