Adicionado um novo link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <li><a href="./index.html">Pagina 1</a></li>
 <li><a href="https://www.google.com/">Google</a></li>
 <li><a href="https://www.coderhouse.com.br/">Coderhouse</a></li>
-<li><a href="/"></a></li>
+<li><a href="https://github.com/LuisSantosz/Aula6/settings/pages">Aula 6 Github</a></li>
 </ul>
 </nav>
 
